--- a/site/index.html
+++ b/site/index.html
@@ -1,233 +1,239 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Master Your Metrics – Diagnostic</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Master Your Metrics – Diagnostic</title>
 
-<style>
-:root {
-  --primary: #6c5ce7;
-  --secondary: #00cec9;
-  --accent: #28a745;
-  --text-main: #2d3436;
-}
+  <style>
+    :root {
+      --bg-main: #f4f6f8;
+      --bg-dark: #0b1c2d;
+      --primary: #6c5ce7;
+      --secondary: #00cec9;
+      --accent: #28a745;
+      --text-main: #2d3436;
+    }
 
-body {
-  font-family: "Inter","Segoe UI",Roboto,sans-serif;
-  margin: 0;
-  background: linear-gradient(135deg,#f4f6f8,#eef2f6);
-  color: var(--text-main);
-  line-height: 1.6;
-}
+    body {
+      font-family: "Inter", "Segoe UI", Roboto, sans-serif;
+      margin: 0;
+      background: linear-gradient(135deg, #f4f6f8, #eef2f6);
+      color: var(--text-main);
+      line-height: 1.6;
+    }
 
-header, footer {
-  background: linear-gradient(135deg,#0b1c2d,#162c4f);
-  color: white;
-  padding: 3rem 2rem;
-  text-align: center;
-}
+    header, footer {
+      background: linear-gradient(135deg, #0b1c2d, #162c4f);
+      color: white;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
 
-section {
-  padding: 3rem 2rem;
-  max-width: 1100px;
-  margin: auto;
-}
+    header h1 {
+      font-size: 2.4rem;
+      letter-spacing: -0.5px;
+    }
 
-.cta-button {
-  display: inline-block;
-  padding: 1rem 2.4rem;
-  background: linear-gradient(135deg,var(--primary),var(--secondary));
-  color: white;
-  text-decoration: none;
-  border-radius: 50px;
-  font-weight: 600;
-  margin-top: 1.5rem;
-  box-shadow: 0 8px 18px rgba(108,92,231,0.25);
-}
+    section {
+      padding: 3rem 2rem;
+      max-width: 1100px;
+      margin: auto;
+    }
 
-.features {
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-  gap: 1.5rem;
-}
+    .cta-button {
+      display: inline-block;
+      padding: 1rem 2.4rem;
+      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      color: white;
+      text-decoration: none;
+      border-radius: 50px;
+      font-weight: 600;
+      margin-top: 1.5rem;
+      transition: all 0.25s ease;
+      box-shadow: 0 8px 18px rgba(108,92,231,0.25);
+    }
 
-.feature {
-  background: white;
-  padding: 1.8rem;
-  border-radius: 16px;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
-  transition: transform .25s ease, box-shadow .25s ease;
-}
-.feature:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 18px 40px rgba(0,0,0,0.12);
-}
+    .cta-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 12px 26px rgba(108,92,231,0.35);
+    }
 
-/* ====== TÉMOIGNAGES ====== */
-#temoignages {
-  background: #f8f9fb;
-}
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+    }
 
-.testimonial-slider {
-  max-width: 900px;
-  margin: 0 auto;
-  position: relative;
-}
+    .feature {
+      background: white;
+      padding: 1.8rem;
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+    }
 
-.testimonial-card {
-  display: none;
-  background: white;
-  padding: 2.2rem;
-  border-radius: 18px;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
-  animation: fade 0.6s ease;
-}
+    .feature:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 18px 40px rgba(0,0,0,0.12);
+    }
 
-.testimonial-card.active {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
+    .testimonial {
+      background: white;
+      margin-top: 3rem;
+      padding: 2rem;
+      border-left: 5px solid var(--primary);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    }
 
-.testimonial-photo {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  object-fit: cover;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.2);
-}
+    #scrollCTA {
+      position: fixed;
+      bottom: 28px;
+      right: 28px;
+      background: linear-gradient(135deg, var(--accent), #1e7e34);
+      color: white;
+      padding: 14px 26px;
+      border-radius: 50px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 10px 24px rgba(40,167,69,0.35);
+      transition: all 0.25s ease;
+      display: none;
+    }
 
-.testimonial-text {
-  font-style: italic;
-  font-size: 1.05em;
-}
+    #scrollCTA:hover {
+      transform: translateY(-2px);
+    }
 
-.testimonial-author {
-  margin-top: 10px;
-  font-weight: bold;
-  font-style: normal;
-}
+    .test-popup {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background: #0b1f3a;
+      color: white;
+      padding: 16px 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.25);
+      display: none;
+      z-index: 10000;
+      max-width: 300px;
+      font-size: 0.95em;
+    }
 
-@keyframes fade {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+    .popup-button {
+      background-color: #28a745;
+      color: white;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 10px;
+    }
 
-/* popup */
-.test-popup {
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-  background: #0b1f3a;
-  color: white;
-  padding: 16px 20px;
-  border-radius: 12px;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.25);
-  display: none;
-  z-index: 10000;
-  max-width: 300px;
-}
-.popup-button {
-  background:#28a745;
-  color:white;
-  padding:10px 15px;
-  border-radius:6px;
-  text-decoration:none;
-  display:inline-block;
-}
-.popup-close {
-  position:absolute;
-  top:6px;
-  right:10px;
-  cursor:pointer;
-}
-</style>
+    .popup-close {
+      position: absolute;
+      top: 6px;
+      right: 10px;
+      cursor: pointer;
+      font-size: 18px;
+    }
+  </style>
+
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
 
 <header>
-<h1>Transformez vos contraintes en opportunités.</h1>
-<p style="max-width:800px;margin:auto;">
-Nos diagnostics ESG, AML/KYC, digitalisation et cybersécurité vous aident à piloter votre activité et anticiper 2026.
-</p>
-<a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l’auto-évaluation</a>
+  <h1>Transformez vos contraintes en opportunités.</h1>
+  <p style="font-size:1.2em;max-width:800px;margin:auto;">
+    Nos diagnostics ESG, AML/KYC, digitalisation et cybersécurité vous aident à mieux piloter votre activité,
+    à répondre aux attentes des clients et à anticiper les évolutions réglementaires.
+  </p>
+  <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 </header>
 
-<section id="modules">
-<h2>Nos 5 Modules Clés</h2>
-<div class="features">
-<a href="diagnostics/esg.html" class="feature">🌱 ESG<br>Évaluez vos engagements durables</a>
-<a href="diagnostics/aml.html" class="feature">🔒 AML/KYC<br>Renforcez votre conformité</a>
-<a href="diagnostics/digital.html" class="feature">💻 Digitalisation<br>Identifiez vos leviers</a>
-<a href="diagnostics/credit.html" class="feature">📊 Crédit<br>Optimisez vos ratios</a>
-<a href="diagnostics/cyber.html" class="feature">🛡️ Cybersécurité<br>Mesurez vos protections</a>
-</div>
+<section id="about">
+  <h2>Qui sommes-nous ?</h2>
+  <div style="display:flex;gap:30px;flex-wrap:wrap;align-items:center;">
+    <img src="MMimage.JPG" alt="Équipe Master Your Metrics"
+         style="max-width:300px;border-radius:14px;box-shadow:0 8px 20px rgba(0,0,0,0.12);">
+    <div>
+      <p><strong>Master Your Metrics</strong> est une solution conçue par des experts en finance,
+        conformité et digital pour aider les indépendants, PME et professionnels du chiffre à
+        <strong>piloter leur activité avec clarté et anticipation</strong>.
+      </p>
+      <p>
+        À l’approche de <strong>2026</strong>, les exigences réglementaires, les attentes des partenaires
+        et la pression sur la performance s’intensifient.
+        Nous vous aidons à <strong>évaluer objectivement votre situation</strong> et à
+        <strong>prioriser les bonnes décisions</strong>.
+      </p>
+      <p style="font-weight:600;color:#0b1f3a;">
+        Diagnostic clair. Décisions structurées. Actions maîtrisées.
+      </p>
+    </div>
+  </div>
 </section>
 
-<!-- ====== TÉMOIGNAGES ====== -->
+<section id="modules">
+  <h2>Nos 5 Modules Clés</h2>
+  <div class="features">
+    <a href="diagnostics/esg.html" class="feature">🌱 <strong>ESG</strong><br>Évaluez vos engagements durables</a>
+    <a href="diagnostics/aml.html" class="feature">🔒 <strong>AML/KYC</strong><br>Renforcez votre conformité</a>
+    <a href="diagnostics/digital.html" class="feature">💻 <strong>Digitalisation</strong><br>Identifiez vos leviers</a>
+    <a href="diagnostics/credit.html" class="feature">📊 <strong>Crédit</strong><br>Optimisez vos ratios</a>
+    <a href="diagnostics/cyber.html" class="feature">🛡️ <strong>Cybersécurité</strong><br>Mesurez vos protections</a>
+  </div>
+</section>
+
 <section id="temoignages">
-<h2 style="text-align:center;">🎤 Ils témoignent</h2>
-
-<div class="testimonial-slider">
-
-  <div class="testimonial-card active">
-    <img src="assets/images/Sophie.jpg" class="testimonial-photo">
-    <div>
-      <div class="testimonial-text">
-        “Le diagnostic m’a permis de comprendre pourquoi ma demande de crédit bloquait. En 30 minutes, tout était clair.”
-      </div>
-      <div class="testimonial-author">— Sophie L., Dirigeante de PME</div>
-    </div>
+  <h2>🎤 Ils témoignent</h2>
+  <div class="testimonial">
+    “En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait.
+    Nous avons pu restructurer notre approche.”
+    <br><strong>— Sophie L., Dirigeante de PME</strong>
   </div>
+</section>
 
-  <div class="testimonial-card">
-    <img src="assets/images/Marc.jpg" class="testimonial-photo">
-    <div>
-      <div class="testimonial-text">
-        “Nous pensions être conformes en AML. Le score a révélé des failles critiques avant un contrôle.”
-      </div>
-      <div class="testimonial-author">— Marc D., Expert-comptable</div>
-    </div>
-  </div>
-
-  <div class="testimonial-card">
-    <img src="assets/images/Karim.jpg" class="testimonial-photo">
-    <div>
-      <div class="testimonial-text">
-        “Le module cybersécurité a été un électrochoc. Nous avons sécurisé nos accès immédiatement.”
-      </div>
-      <div class="testimonial-author">— Karim B., Responsable conformité</div>
-    </div>
-  </div>
-
-</div>
+<section id="contact">
+  <h2>📬 Contactez-nous</h2>
+  <p>Prêt à mesurer et améliorer vos indicateurs clés ?</p>
+  <a href="mailto:masteryourmetrics@gmail.com" class="cta-button">📩 Prendre contact</a>
 </section>
 
 <footer>
-<p>© 2025 Master Your Metrics — Tous droits réservés</p>
+  <p>&copy; 2025 Master Your Metrics – Tous droits réservés</p>
 </footer>
 
-<script>
-let slides = document.querySelectorAll('.testimonial-card');
-let current = 0;
-setInterval(() => {
-  slides[current].classList.remove('active');
-  current = (current + 1) % slides.length;
-  slides[current].classList.add('active');
-}, 6000);
+<a id="scrollCTA" href="diagnostics/esg.html">🚀 Faites le test</a>
 
-// popup
-setTimeout(() => {
-  document.querySelector('.test-popup').style.display = 'block';
-}, 10000);
+<script>
+  const scrollCTA = document.getElementById('scrollCTA');
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 600) {
+      scrollCTA.style.display = 'block';
+    } else {
+      scrollCTA.style.display = 'none';
+    }
+  });
+
+  setTimeout(() => {
+    document.getElementById('test-popup').style.display = 'block';
+  }, 10000);
+
+  document.addEventListener('click', (e) => {
+    if (e.target.id === 'popup-close') {
+      document.getElementById('test-popup').style.display = 'none';
+    }
+  });
 </script>
 
-<div class="test-popup">
-<p>📊 Besoin d’un diagnostic clair avant 2026 ?</p>
-<a href="diagnostics/esg.html" class="popup-button">🚀 Lancer le diagnostic</a>
-<span class="popup-close" onclick="this.parentElement.style.display='none'">&times;</span>
+<div id="test-popup" class="test-popup">
+  <p>📊 Besoin d’un coup de pouce pour structurer votre démarche ?</p>
+  <a href="diagnostics/esg.html" class="popup-button">🚀 Lancer le diagnostic</a>
+  <span id="popup-close" class="popup-close">&times;</span>
 </div>
 
 </body>
