--- a/site/index.html
+++ b/site/index.html
@@ -190,11 +190,29 @@
 
 <section id="temoignages">
   <h2>🎤 Ils témoignent</h2>
+ <div style="display:flex; align-items:flex-start; gap:16px; margin-top:20px;">
+
+  <img 
+    src="assets/images/sophie.jpg"
+    alt="Sophie L., Dirigeante de PME"
+    style="
+      width:80px;
+      height:80px;
+      border-radius:50%;
+      object-fit:cover;
+      box-shadow:0 6px 14px rgba(0,0,0,0.15);
+      flex-shrink:0;
+    "
+  >
+
   <div class="testimonial">
     “En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait.
-    Nous avons pu restructurer notre approche.”
-    <br><strong>— Sophie L., Dirigeante de PME</strong>
+    On a tout restructuré grâce au diagnostic.”
+    <br>
+    <strong>— Sophie L., Dirigeante de PME</strong>
   </div>
+
+</div>
 </section>
 
 <section id="contact">
