--- a/site/index.html
+++ b/site/index.html
@@ -187,7 +187,100 @@
     <a href="diagnostics/cyber.html" class="feature">🛡️ <strong>Cybersécurité</strong><br>Mesurez vos protections</a>
   </div>
 </section>
+<!-- =======================
+     SECTION RENDEZ-VOUS
+======================= -->
+<section id="prendre-rendez-vous"
+style="
+  background: linear-gradient(135deg, #001f3f, #003a70);
+  color: white;
+  padding: 80px 20px;
+  text-align: center;
+">
 
+  <div style="max-width: 900px; margin: 0 auto;">
+
+    <h2 style="font-size: 2.6em; margin-bottom: 20px;">
+      🎯 Passez du diagnostic à l’action
+    </h2>
+
+    <p style="
+      font-size: 1.25em;
+      line-height: 1.6;
+      max-width: 750px;
+      margin: 0 auto 35px auto;
+      opacity: 0.95;
+    ">
+      Vous avez complété votre diagnostic.<br>
+      En <strong>30 minutes gratuites</strong>, nous passons en revue vos résultats pour
+      <strong>évaluer votre niveau de maturité</strong>, identifier vos points critiques
+      et définir <strong>les priorités d’action</strong>,
+      afin de <strong>sécuriser votre activité</strong> — sans jargon inutile.
+    </p>
+
+    <div style="
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+      margin-bottom: 40px;
+    ">
+
+      <div style="max-width: 220px;">
+        <div style="font-size: 2.2em;">📊</div>
+        <strong>Lecture de vos scores</strong>
+        <p style="font-size: 0.95em; opacity: 0.9;">
+          ESG, AML, digital, cyber, crédit
+        </p>
+      </div>
+
+      <div style="max-width: 220px;">
+        <div style="font-size: 2.2em;">⚠️</div>
+        <strong>Points critiques</strong>
+        <p style="font-size: 0.95em; opacity: 0.9;">
+          Risques et écarts prioritaires
+        </p>
+      </div>
+
+      <div style="max-width: 220px;">
+        <div style="font-size: 2.2em;">🧭</div>
+        <strong>Décisions à prendre</strong>
+        <p style="font-size: 0.95em; opacity: 0.9;">
+          Actions concrètes et réalistes
+        </p>
+      </div>
+
+    </div>
+
+    <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
+       target="_blank"
+       rel="noopener"
+       style="
+         display: inline-block;
+         background: #28a745;
+         color: white;
+         padding: 18px 36px;
+         font-size: 1.3em;
+         border-radius: 10px;
+         text-decoration: none;
+         font-weight: bold;
+         box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+         transition: transform 0.2s ease, box-shadow 0.2s ease;
+       "
+       onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 10px 24px rgba(0,0,0,0.3)'"
+       onmouseout="this.style.transform='none';this.style.boxShadow='0 6px 18px rgba(0,0,0,0.25)'"
+    >
+      📅 Réserver mon entretien gratuit (30 min)
+    </a>
+
+    <p style="margin-top: 18px; font-size: 0.9em; opacity: 0.85;">
+      ✔ Sans engagement &nbsp; • &nbsp;
+      ✔ Échange confidentiel &nbsp; • &nbsp;
+      ✔ Créneaux limités
+    </p>
+
+  </div>
+</section>
 <section id="temoignages">
   <h2>🎤 Ils témoignent</h2>
  <div style="display:flex; align-items:flex-start; gap:16px; margin-top:20px;">
