--- a/site/index.html
+++ b/site/index.html
@@ -283,30 +283,40 @@ style="
 </section>
 <section id="temoignages">
   <h2>🎤 Ils témoignent</h2>
- <div style="display:flex; align-items:flex-start; gap:16px; margin-top:20px;">
 
-  <img 
-    src="assets/images/sophie.jpg"
-    alt="Sophie L., Dirigeante de PME"
-    style="
-      width:80px;
-      height:80px;
-      border-radius:50%;
-      object-fit:cover;
-      box-shadow:0 6px 14px rgba(0,0,0,0.15);
-      flex-shrink:0;
-    "
-  >
+  <div class="testimonial-carousel">
+    <div class="testimonial-slide active">
+      <img src="assets/images/Sophie.jpg" alt="Sophie, dirigeante PME">
+      <blockquote>
+        “En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait.
+        Le diagnostic a permis de restructurer nos priorités et d’agir rapidement.”
+      </blockquote>
+      <strong>Sophie L.</strong>
+      <span>Dirigeante de PME</span>
+    </div>
 
-  <div class="testimonial">
-    “En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait.
-    On a tout restructuré grâce au diagnostic.”
-    <br>
-    <strong>— Sophie L., Dirigeante de PME</strong>
+    <div class="testimonial-slide">
+      <img src="assets/images/Marc.jpg" alt="Marc, expert-comptable">
+      <blockquote>
+        “L’approche est claire, structurée et orientée décision.
+        Le diagnostic m’a aidé à anticiper des risques que je sous-estimais.”
+      </blockquote>
+      <strong>Marc D.</strong>
+      <span>Expert-comptable</span>
+    </div>
+
+    <div class="testimonial-slide">
+      <img src="assets/images/Karim.jpg" alt="Karim, responsable conformité">
+      <blockquote>
+        “Le module AML m’a permis d’identifier des failles concrètes avant un contrôle.
+        C’est un vrai outil de pilotage, pas un gadget.”
+      </blockquote>
+      <strong>Karim B.</strong>
+      <span>Responsable conformité</span>
+    </div>
   </div>
-
-</div>
 </section>
+
 
 <section id="contact">
   <h2>📬 Contactez-nous</h2>
