--- a/site/index.html
+++ b/site/index.html
@@ -286,7 +286,7 @@ style="
 
   <div class="testimonial-carousel">
     <div class="testimonial-slide active">
-      <img src="assets/images/Sophie.jpg" alt="Sophie, dirigeante PME">
+      <img src="assets/images/sophie.jpg" alt="Sophie, dirigeante PME">
       <blockquote>
         “En quelques clics, j’ai compris pourquoi ma demande de crédit bloquait.
         Le diagnostic a permis de restructurer nos priorités et d’agir rapidement.”
@@ -296,7 +296,7 @@ style="
     </div>
 
     <div class="testimonial-slide">
-      <img src="assets/images/Marc.jpg" alt="Marc, expert-comptable">
+      <img src="assets/images/marc.jpg" alt="Marc, expert-comptable">
       <blockquote>
         “L’approche est claire, structurée et orientée décision.
         Le diagnostic m’a aidé à anticiper des risques que je sous-estimais.”
@@ -306,7 +306,7 @@ style="
     </div>
 
     <div class="testimonial-slide">
-      <img src="assets/images/Karim.jpg" alt="Karim, responsable conformité">
+      <img src="assets/images/karim.jpg" alt="Karim, responsable conformité">
       <blockquote>
         “Le module AML m’a permis d’identifier des failles concrètes avant un contrôle.
         C’est un vrai outil de pilotage, pas un gadget.”
