--- a/site/index.html
+++ b/site/index.html
@@ -274,7 +274,12 @@ style="
   text-align: center;
 ">
 
-  <div style="max-width: 900px; margin: 0 auto;">
+ <div style="
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+">
+
 
     <h2 style="font-size: 2.6em; margin-bottom: 20px;">
       🎯 Passez du diagnostic à l’action
