--- a/site/index.html
+++ b/site/index.html
@@ -270,9 +270,17 @@
 style="
   background: linear-gradient(135deg, #001f3f, #003a70);
   color: white;
-  padding: 80px 20px;
+  padding: 80px 0;
   text-align: center;
+
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 ">
+
 
  <div style="
   max-width: 1200px;
@@ -333,26 +341,26 @@ style="
 
     </div>
 
-    <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
-       target="_blank"
-       rel="noopener"
-       style="
-         display: inline-block;
-         background: #28a745;
-         color: white;
-         padding: 18px 36px;
-         font-size: 1.3em;
-         border-radius: 10px;
-         text-decoration: none;
-         font-weight: bold;
-         box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-         transition: transform 0.2s ease, box-shadow 0.2s ease;
-       "
-       onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 10px 24px rgba(0,0,0,0.3)'"
-       onmouseout="this.style.transform='none';this.style.boxShadow='0 6px 18px rgba(0,0,0,0.25)'"
-    >
-      📅 Réserver mon entretien gratuit (30 min)
-    </a>
+   <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
+   target="_blank"
+   rel="noopener"
+   style="
+     display: inline-block;
+     background: white;
+     color: #001f3f;
+     padding: 20px 48px;
+     font-size: 1.35em;
+     border-radius: 50px;
+     text-decoration: none;
+     font-weight: bold;
+     box-shadow: 0 10px 28px rgba(0,0,0,0.25);
+     transition: all 0.25s ease;
+   "
+   onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 14px 36px rgba(0,0,0,0.35)'"
+   onmouseout="this.style.transform='none';this.style.boxShadow='0 10px 28px rgba(0,0,0,0.25)'"
+>
+📅 Réserver mon entretien gratuit (30 min)
+</a>
 
     <p style="margin-top: 18px; font-size: 0.9em; opacity: 0.85;">
       ✔ Sans engagement &nbsp; • &nbsp;
