--- a/site/index.html
+++ b/site/index.html
@@ -273,12 +273,7 @@ style="
   padding: 80px 0;
   text-align: center;
 
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  width: 100%;
 ">
 
 
