--- a/site/index.html
+++ b/site/index.html
@@ -38,7 +38,7 @@
     section {
       padding: 3rem 2rem;
       max-width: 1100px;
-      margin: auto;
+      margin: 0;
     }
 
     .cta-button {
