--- a/site/index.html
+++ b/site/index.html
@@ -316,7 +316,7 @@ style="
 
       <div style="max-width: 220px;">
         <div style="font-size: 2.2em;">🧭</div>
-        <strong>Décisions à prendre</strong>
+        <strong>Plan d'actions</strong>
         <p style="font-size: 0.95em; opacity: 0.9;">
           Actions concrètes et réalistes
         </p>
