--- a/site/index.html
+++ b/site/index.html
@@ -217,6 +217,8 @@
   </style>
 
   <script defer src="/_vercel/insights/script.js"></script>
+  <script defer src="https://vercel.com/insights/script.js"></script>
+
 </head>
 
 <body>
