--- a/site/synthese.html
+++ b/site/synthese.html
@@ -151,6 +151,7 @@ footer {
 }
 </style>
   <script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 
 </head>
 
@@ -266,6 +267,7 @@ https://calendar.app.google/TWzExGsSew5rCkN77
 
 </body>
 </html>
+
 
 
 
