--- a/site/diagnostics/credit.html
+++ b/site/diagnostics/credit.html
@@ -93,6 +93,7 @@ footer {
 }
 </style>
   <script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 
 </head>
 
@@ -219,4 +220,5 @@ loadQuestion();
 
 </body>
 </html>
+
 
