--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -93,6 +93,7 @@ footer {
 }
 </style>
   <script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 
 </head>
 
@@ -232,6 +233,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
