--- a/site/diagnostics/digital.html
+++ b/site/diagnostics/digital.html
@@ -103,6 +103,7 @@ footer {
 }
 </style>
   <script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 
 </head>
 
@@ -251,6 +252,7 @@ loadQuestion();
 
 </body>
 </html>
+
 
 
 
