--- a/site/diagnostics/esg.html
+++ b/site/diagnostics/esg.html
@@ -92,9 +92,9 @@ footer {
   margin-top: 30px;
 }
 </style>
-  <script defer src="/_vercel/insights/script.js"></script>
-<script defer src="https://vercel.com/insights/script.js"></script>
 
+<script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 </head>
 
 <body>
@@ -107,15 +107,11 @@ footer {
 <main>
 
 <div class="card">
-
-<div class="progress"><div class="progress-bar" id="progressBar"></div></div>
-<div class="counter" id="counter"></div>
-
-<div class="question" id="question"></div>
-<div id="choices"></div>
-
-<div id="result"></div>
-
+  <div class="progress"><div class="progress-bar" id="progressBar"></div></div>
+  <div class="counter" id="counter"></div>
+  <div class="question" id="question"></div>
+  <div id="choices"></div>
+  <div id="result"></div>
 </div>
 
 <div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
@@ -123,37 +119,26 @@ footer {
 </div>
 
 <footer>
-<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#27ae60;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
+<a href="../index.html"
+   style="display:inline-block;margin-top:20px;padding:12px 24px;background:#27ae60;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
+← Retour à l'accueil
+</a>
 </footer>
 
 </main>
 
 <script>
 const questions = [
-  {
-    text: "Disposez-vous d’une politique ESG formalisée et pilotée par la direction ?",
-    weight: 30
-  },
-  {
-    text: "Mesurez-vous vos impacts environnementaux (énergie, CO₂, ressources) avec des indicateurs fiables ?",
-    weight: 25
-  },
-  {
-    text: "Avez-vous mis en place des actions concrètes de réduction et un plan de suivi environnemental ?",
-    weight: 20
-  },
-  {
-    text: "Les enjeux sociaux (RH, bien-être, risques humains) sont-ils identifiés et suivis ?",
-    weight: 15
-  },
-  {
-    text: "Êtes-vous capable de répondre rapidement à une demande ESG d’un client, d’une banque ou d’un partenaire ?",
-    weight: 10
-  }
+  { text: "Disposez-vous d’une politique ESG formalisée et pilotée par la direction ?", weight: 30 },
+  { text: "Mesurez-vous vos impacts environnementaux (énergie, CO₂, ressources) avec des indicateurs fiables ?", weight: 25 },
+  { text: "Avez-vous mis en place des actions concrètes de réduction et un plan de suivi environnemental ?", weight: 20 },
+  { text: "Les enjeux sociaux (RH, bien-être, risques humains) sont-ils identifiés et suivis ?", weight: 15 },
+  { text: "Êtes-vous capable de répondre rapidement à une demande ESG d’un client, d’une banque ou d’un partenaire ?", weight: 10 }
 ];
 
 let index = 0;
-let score = 0;
+let totalScore = 0;
+let answers = [];
 
 const questionEl = document.getElementById("question");
 const choicesEl = document.getElementById("choices");
@@ -163,8 +148,8 @@ const resultEl = document.getElementById("result");
 
 function loadQuestion() {
   const q = questions[index];
-  questionEl.innerText = q.text;
-  counter.innerText = `Question ${index + 1} / ${questions.length}`;
+  questionEl.textContent = q.text;
+  counter.textContent = `Question ${index + 1} / ${questions.length}`;
   progressBar.style.width = `${(index / questions.length) * 100}%`;
   choicesEl.innerHTML = "";
 
@@ -175,12 +160,17 @@ function loadQuestion() {
   ].forEach(opt => {
     const btn = document.createElement("button");
     btn.className = "choice";
-    btn.innerText = opt.label;
+    btn.textContent = opt.label;
     btn.onclick = () => {
-      score += opt.value * q.weight;
+      const weighted = opt.value * q.weight;
+      totalScore += weighted;
+      answers.push({
+        question: q.text,
+        answer: opt.label,
+        score: Math.round(weighted)
+      });
       index++;
-      if (index < questions.length) loadQuestion();
-      else showResult();
+      index < questions.length ? loadQuestion() : showResult();
     };
     choicesEl.appendChild(btn);
   });
@@ -189,20 +179,21 @@ function loadQuestion() {
 function showResult() {
   progressBar.style.width = "100%";
 
-  const finalScore = Math.round(score);
+  const finalScore = Math.round(totalScore);
   localStorage.setItem("scoreESG", finalScore);
+  localStorage.setItem("answersESG", JSON.stringify(answers));
 
-  let message = finalScore < 40
-    ? "🟥 Maturité ESG faible – structuration prioritaire."
-    : finalScore < 70
-    ? "🟧 ESG en développement – fondations à renforcer."
-    : "🟩 ESG avancé – démarche crédible et valorisable.";
+  let message =
+    finalScore < 40
+      ? "🟥 Maturité ESG faible – structuration prioritaire."
+      : finalScore < 70
+      ? "🟧 ESG en développement – fondations à renforcer."
+      : "🟩 ESG avancé – démarche crédible et valorisable.";
 
   questionEl.style.display = "none";
   choicesEl.style.display = "none";
   counter.style.display = "none";
 
-  resultEl.style.display = "block";
   resultEl.innerHTML = `
     <h2>${message}</h2>
     <p><strong>Score ESG :</strong> ${finalScore} / 100</p>
@@ -212,17 +203,16 @@ function showResult() {
     </div>
   `;
 
-  const timerEl = document.getElementById("nextStepTimer");
-  const countdownEl = document.getElementById("countdown");
+  const timer = document.getElementById("nextStepTimer");
+  const countdown = document.getElementById("countdown");
+  timer.style.display = "block";
 
-  timerEl.style.display = "block";
-  let timeLeft = 4;
-
-  const interval = setInterval(() => {
-    timeLeft--;
-    countdownEl.innerText = timeLeft;
-    if (timeLeft <= 0) {
-      clearInterval(interval);
+  let t = 4;
+  const i = setInterval(() => {
+    t--;
+    countdown.textContent = t;
+    if (t === 0) {
+      clearInterval(i);
       window.location.href = "aml.html";
     }
   }, 1000);
@@ -233,5 +223,3 @@ loadQuestion();
 
 </body>
 </html>
-
-
