--- a/site/diagnostics/credit.html
+++ b/site/diagnostics/credit.html
@@ -92,9 +92,9 @@ footer {
   margin-top: 30px;
 }
 </style>
-  <script defer src="/_vercel/insights/script.js"></script>
-<script defer src="https://vercel.com/insights/script.js"></script>
 
+<script defer src="/_vercel/insights/script.js"></script>
+<script defer src="https://vercel.com/insights/script.js"></script>
 </head>
 
 <body>
@@ -108,22 +108,29 @@ footer {
 
 <div class="card">
 
-<div class="progress"><div class="progress-bar" id="progressBar"></div></div>
-<div class="counter" id="counter"></div>
+  <div class="progress">
+    <div class="progress-bar" id="progressBar"></div>
+  </div>
 
-<div class="question" id="question"></div>
-<div id="choices"></div>
+  <div class="counter" id="counter"></div>
 
-<div id="result"></div>
+  <div class="question" id="question"></div>
+  <div id="choices"></div>
+
+  <div id="result"></div>
 
 </div>
 
 <div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
-  Passage au diagnostic suivant (<strong>Cybersécurité</strong>) dans <strong><span id="countdown">4</span>s</strong>…
+  Passage au diagnostic suivant (<strong>Cybersécurité</strong>) dans
+  <strong><span id="countdown">4</span>s</strong>…
 </div>
 
 <footer>
-<a href="../index.html" style="display:inline-block;margin-top:20px;padding:12px 24px;background:#2980b9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">← Retour à l'accueil</a>
+<a href="../index.html"
+   style="display:inline-block;margin-top:20px;padding:12px 24px;background:#2980b9;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
+← Retour à l'accueil
+</a>
 </footer>
 
 </main>
@@ -140,7 +147,8 @@ const questions = [
 ];
 
 let index = 0;
-let score = 0;
+let totalScore = 0;
+let answers = [];
 
 const questionEl = document.getElementById("question");
 const choicesEl = document.getElementById("choices");
@@ -150,8 +158,8 @@ const resultEl = document.getElementById("result");
 
 function loadQuestion() {
   const q = questions[index];
-  questionEl.innerText = q.text;
-  counter.innerText = `Question ${index + 1} / ${questions.length}`;
+  questionEl.textContent = q.text;
+  counter.textContent = `Question ${index + 1} / ${questions.length}`;
   progressBar.style.width = `${(index / questions.length) * 100}%`;
   choicesEl.innerHTML = "";
 
@@ -162,12 +170,19 @@ function loadQuestion() {
   ].forEach(opt => {
     const btn = document.createElement("button");
     btn.className = "choice";
-    btn.innerText = opt.label;
+    btn.textContent = opt.label;
     btn.onclick = () => {
-      score += opt.value * q.weight;
+      const weighted = opt.value * q.weight;
+      totalScore += weighted;
+
+      answers.push({
+        question: q.text,
+        answer: opt.label,
+        score: Math.round(weighted)
+      });
+
       index++;
-      if (index < questions.length) loadQuestion();
-      else showResult();
+      index < questions.length ? loadQuestion() : showResult();
     };
     choicesEl.appendChild(btn);
   });
@@ -176,20 +191,21 @@ function loadQuestion() {
 function showResult() {
   progressBar.style.width = "100%";
 
-  const finalScore = Math.round(score);
+  const finalScore = Math.round(totalScore);
   localStorage.setItem("scoreCredit", finalScore);
+  localStorage.setItem("answersCredit", JSON.stringify(answers));
 
-  let message = finalScore < 40
-    ? "🟥 Structure financière fragile – vigilance avant toute demande de crédit."
-    : finalScore < 70
-    ? "🟧 Situation financière intermédiaire – points à consolider."
-    : "🟩 Structure financière solide – bon profil pour un financement.";
+  let message =
+    finalScore < 40
+      ? "🟥 Structure financière fragile – vigilance avant toute demande de crédit."
+      : finalScore < 70
+      ? "🟧 Situation financière intermédiaire – points à consolider."
+      : "🟩 Structure financière solide – bon profil pour un financement.";
 
   questionEl.style.display = "none";
   choicesEl.style.display = "none";
   counter.style.display = "none";
 
-  resultEl.style.display = "block";
   resultEl.innerHTML = `
     <h2>${message}</h2>
     <p><strong>Score Crédit :</strong> ${finalScore} / 100</p>
@@ -204,10 +220,11 @@ function showResult() {
 
   timerEl.style.display = "block";
   let timeLeft = 4;
+  countdownEl.textContent = timeLeft;
 
   const interval = setInterval(() => {
     timeLeft--;
-    countdownEl.innerText = timeLeft;
+    countdownEl.textContent = timeLeft;
     if (timeLeft <= 0) {
       clearInterval(interval);
       window.location.href = "cybersecurite.html";
@@ -220,5 +237,3 @@ loadQuestion();
 
 </body>
 </html>
-
-
