--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -240,7 +240,7 @@ function showResult() {
     countdownEl.textContent = timeLeft;
     if (timeLeft <= 0) {
       clearInterval(interval);
-      window.location.href = "synthese.html";
+      window.location.href = "https://master-metrics.vercel.app/synthese.html";
     }
   }, 1000);
 }
@@ -250,3 +250,4 @@ loadQuestion();
 
 </body>
 </html>
+
