--- a/site/synthese.html
+++ b/site/synthese.html
@@ -206,16 +206,22 @@ footer {
 </div>
 
 <section id="contact-form">
-<h3>📤 Partagez votre scorecard</h3>
-<p>Recevez un retour personnalisé et des recommandations concrètes.</p>
-<button onclick="sendReport()">📨 Envoyer ma scorecard</button>
+  <h3>📤 Partagez votre scorecard</h3>
 
-<a href="https://calendar.app.google/TWzExGsSew5rCkN77"
-   target="_blank" rel="noopener"
-   class="calendar-btn">
-📅 Réserver un entretien gratuit (30 min)
-</a>
+  <p>
+    Recevez une analyse personnalisée de vos résultats et
+    des recommandations concrètes adaptées à votre situation.
+  </p>
+
+  <button onclick="sendReport()">
+    📨 Envoyer ma scorecard
+  </button>
+
+  <p style="font-size:0.85em; color:#666; margin-top:12px;">
+    ✔️ Envoi direct par e-mail &nbsp;•&nbsp; ✔️ Aucun engagement &nbsp;•&nbsp; ✔️ Analyse humaine
+  </p>
 </section>
+
 
 <div class="cta-section">
 <h2>Prêt à passer à l’action ?</h2>
@@ -397,3 +403,4 @@ https://calendar.app.google/TWzExGsSew5rCkN77
 
 </body>
 </html>
+
