--- a/site/diagnostics/esg.html
+++ b/site/diagnostics/esg.html
@@ -129,11 +129,26 @@ footer {
 
 <script>
 const questions = [
-  { text: "Disposez-vous d’une politique ESG formalisée et pilotée par la direction ?", weight: 30 },
-  { text: "Mesurez-vous vos impacts environnementaux (énergie, CO₂, ressources) avec des indicateurs fiables ?", weight: 25 },
-  { text: "Avez-vous mis en place des actions concrètes de réduction et un plan de suivi environnemental ?", weight: 20 },
-  { text: "Les enjeux sociaux (RH, bien-être, risques humains) sont-ils identifiés et suivis ?", weight: 15 },
-  { text: "Êtes-vous capable de répondre rapidement à une demande ESG d’un client, d’une banque ou d’un partenaire ?", weight: 10 }
+  {
+    text: "Disposez-vous d’une politique claire sur vos engagements environnementaux, humains et de gouvernance, pilotée par la direction ?",
+    weight: 30
+  },
+  {
+    text: "Mesurez-vous vos impacts environnementaux (énergie, CO₂, ressources) afin de pouvoir les expliquer à un client, une banque ou un partenaire ?",
+    weight: 25
+  },
+  {
+    text: "Avez-vous mis en place des actions concrètes pour réduire vos impacts environnementaux, avec un suivi dans le temps ?",
+    weight: 20
+  },
+  {
+    text: "Les enjeux humains et sociaux (ressources humaines, bien-être, risques liés aux équipes) sont-ils identifiés et suivis ?",
+    weight: 15
+  },
+  {
+    text: "Êtes-vous capable de répondre rapidement à une demande liée à la durabilité ou aux critères ESG d’un client, d’une banque ou d’un partenaire ?",
+    weight: 10
+  }
 ];
 
 let index = 0;
@@ -223,3 +238,4 @@ loadQuestion();
 
 </body>
 </html>
+
