--- a/site/diagnostics/digital.html
+++ b/site/diagnostics/digital.html
@@ -137,14 +137,36 @@ footer {
 
 <script>
 const questions = [
-  { text: "Disposez-vous d’un ERP ou CRM centralisé ?", weight: 15 },
-  { text: "Vos outils métiers sont-ils interconnectés ?", weight: 15 },
-  { text: "Proposez-vous une expérience digitale fluide à vos clients ?", weight: 20 },
-  { text: "Votre site permet-il des actions concrètes (RDV, devis, paiement) ?", weight: 15 },
-  { text: "Disposez-vous d’une stratégie de marketing digital formelle ?", weight: 15 },
-  { text: "Utilisez-vous les réseaux sociaux de manière structurée ?", weight: 10 },
-  { text: "Avez-vous automatisé certaines tâches clés (facturation, relances, reporting) ?", weight: 10 }
+  {
+    text: "Disposez-vous d’un système centralisé pour piloter vos clients, vos ventes et vos opérations au quotidien ?",
+    weight: 15
+  },
+  {
+    text: "Vos outils (facturation, CRM, comptabilité, planning, e-mails) sont-ils connectés entre eux pour éviter les doubles encodages ?",
+    weight: 15
+  },
+  {
+    text: "Vos clients bénéficient-ils d’une expérience digitale fluide (prise de rendez-vous, devis, documents, paiements) ?",
+    weight: 20
+  },
+  {
+    text: "Votre site internet génère-t-il des actions concrètes et mesurables (leads, demandes, rendez-vous) ?",
+    weight: 15
+  },
+  {
+    text: "Disposez-vous d’une stratégie digitale claire pour développer votre visibilité et votre activité ?",
+    weight: 15
+  },
+  {
+    text: "Utilisez-vous les réseaux sociaux de manière structurée, planifiée et alignée avec vos objectifs business ?",
+    weight: 10
+  },
+  {
+    text: "Certaines tâches répétitives sont-elles automatisées (facturation, relances, reporting, suivi client) ?",
+    weight: 10
+  }
 ];
+
 
 let index = 0;
 let totalScore = 0;
@@ -237,3 +259,4 @@ loadQuestion();
 
 </body>
 </html>
+
