--- a/site/synthese.html
+++ b/site/synthese.html
@@ -400,7 +400,22 @@ https://calendar.app.google/TWzExGsSew5rCkN77
   }
 }
 </script>
+<a href="services.html"
+   style="
+     display:block;
+     margin-top:20px;
+     padding:16px;
+     background:#ffffff;
+     color:#0074D9;
+     text-decoration:none;
+     font-weight:bold;
+     border-radius:8px;
+     border:2px solid #0074D9;
+   ">
+🔍 Découvrir les solutions et sprints proposés
+</a>
 
 </body>
 </html>
+
 
