--- a/site/synthese.html
+++ b/site/synthese.html
@@ -232,6 +232,37 @@ footer {
 📅 Planifier mon entretien
 </a>
 </div>
+<section class="section card" style="border-left:6px solid #0074D9;">
+  <h2>🧭 Et maintenant ?</h2>
+
+  <p style="font-size:1.05em; line-height:1.6;">
+    Votre diagnostic met en évidence des points forts,
+    mais aussi des axes d’amélioration concrets.
+    <strong>Nous vous accompagnons de manière structurée,
+    pragmatique et orientée résultats.</strong>
+  </p>
+
+  <ul style="margin-top:20px; line-height:1.8;">
+    <li>✔️ Analyse approfondie de vos scores et priorités</li>
+    <li>✔️ Sprints opérationnels (30 à 90 jours)</li>
+    <li>✔️ Mise en conformité, digitalisation, sécurisation</li>
+    <li>✔️ Valorisation auprès banques, clients et partenaires</li>
+  </ul>
+
+  <a href="services.html"
+     style="
+       display:inline-block;
+       margin-top:25px;
+       padding:14px 28px;
+       background:#0074D9;
+       color:white;
+       text-decoration:none;
+       font-weight:bold;
+       border-radius:8px;
+     ">
+    🔍 Découvrir nos solutions et sprints
+  </a>
+</section>
 
 <div class="temoignage">
 <p>“Ce diagnostic a mis en lumière des failles que nous n’avions jamais formalisées. L’échange qui a suivi a été décisif.”</p>
@@ -400,22 +431,11 @@ https://calendar.app.google/TWzExGsSew5rCkN77
   }
 }
 </script>
-<a href="services.html"
-   style="
-     display:block;
-     margin-top:20px;
-     padding:16px;
-     background:#ffffff;
-     color:#0074D9;
-     text-decoration:none;
-     font-weight:bold;
-     border-radius:8px;
-     border:2px solid #0074D9;
-   ">
-🔍 Découvrir les solutions et sprints proposés
-</a>
+
+
 
 </body>
 </html>
+
 
 
